Do not require ... in [a:b] syntax

--- a/site/sample.html
+++ b/site/sample.html
@@ -72,8 +72,8 @@ Say that we want to build a cylindrical water tank in 5-foot courses.
   </tr>
 </tbody></table>
 <p>We’ll calculate values for each course, all at once, using vectors. Each vector element represents one course. </p>
-<p>The next line creates a vector. The syntax is <code>[start:step:end...]</code>.</p>
-<p><span class="hurmet-calc" data-entry="𝐡 = [h:h:H...] = ? ft"></span>, water depth at the bottom of each course</p>
+<p>The next line creates a vector. The syntax is <code>[start:step:end]</code>.</p>
+<p><span class="hurmet-calc" data-entry="𝐡 = [h:h:H] = ? ft"></span>, water depth at the bottom of each course</p>
 <p><span class="hurmet-calc" data-entry="𝐩_hydro = γ_w· 𝐡 = ?? psf"></span>, lateral hydrostatic pressure</p>
 <p><span class="hurmet-calc" data-entry="𝐭_h= 𝐩_hydro D = ?? kips/ft"></span>, hoop tension in each course</p>
 <p>Vectors can replace many spreadsheet calculations. Then all of the expressions and values are open to view. That extra information helps you to avoid the errors that creep into spreadsheets.</p>
