--- a/site/index.html
+++ b/site/index.html
@@ -65,6 +65,10 @@
    <p></p>
 </div> <!-- editor -->
 
+<p></p>
+<p>New: Spreadsheets are live. To see an example, go to <a href="/sample.html" target="_blank">Hurmet Sample</a> and scroll down.</p>
+<p>Breaking change: To sum a column in a dataframe, write <code>=sum(up)</code> instead of <code>sum(above)</code>.</p>
+
 <div id="print-div" class="ProseMirror pica"></div>
 </article>
 
