Improve sample's description of units

--- a/site/sample.html
+++ b/site/sample.html
@@ -49,9 +49,9 @@ fractions will be rounded so that no more than 3 significant digits appear.</p>
 
 <h2>Unit-Aware Calculations</h2>
 <p>Physical units can be part of your calculations. Hurmet will automatically convert the units.<br>
-Write unit names between single quotes, as in <code>'meter'</code>, and write a <code>??</code> where you want the result of a unit-aware calc.</p>
-<p><span class="hurmet-calc" data-entry="P = 10000 'V'·20 'amps' = ?? kW"></span></p>
-<p><span class="hurmet-calc" data-entry="A = 4 'acres'"></span></p>
+Write numbers and units names together with no space, as in <code>20meters</code> or write unit names between single quotes, as in <code> 4 'nautical miles'</code>, and write a <code>??</code> where you want the result of a unit-aware calc.</p>
+<p><span class="hurmet-calc" data-entry="P = 10000V·20 'amps' = ?? kW"></span></p>
+<p><span class="hurmet-calc" data-entry="A = 4acres"></span></p>
 <p><span class="hurmet-calc" data-entry="L = A/100 'feet' = ?? m"></span></p>
 <p><span class="hurmet-calc" data-entry="L_square = √A = ?? m"></span></p>
 <p><span class="hurmet-calc" data-entry="F = 200 'lbf/ft'· 100 'm/min'· 2 'hrs' = ?? kN"></span></p>
