In Markdown, treat ^x^ as a superscript

--- a/site/manual.html
+++ b/site/manual.html
@@ -60,6 +60,7 @@
 <tr><td><code>**Bold**</code></td><td><strong>Bold</strong></td></tr>
 <tr><td><code>**_Bold Italic_**</code></td><td><strong><em>Bold Italic</em></strong></td></tr>
 <tr><td><code>~subscript~</code></td><td><sub>subscript</sub></td></tr>
+<tr><td><code>^superscript^</code></td><td><sup>superscript</sup></td></tr>
 <tr><td><code>~~strikethrough~~</code></td><td><del>strikethrough</del></td></tr>
 <tr><td><code>`inline code`</code></td><td><code>inline code</code></td></tr>
 <tr><td><code>¢` calcu = la/tion `</code></td><td><span class='hurmet-calc' data-entry='calcu = la/tion'><math><mrow><mrow><mtext></mtext><mi>calcu</mi></mrow><mo>=</mo><mstyle displaystyle="true" scriptlevel="0"><mfrac><mrow><mtext></mtext><mi>la</mi></mrow><mrow><mtext></mtext><mi>tion</mi></mrow></mfrac></mstyle></mrow></math></span></td></tr>
