--- a/site/sample.html
+++ b/site/sample.html
@@ -127,7 +127,7 @@ Say that we want to build a cylindrical water tank in 5-foot courses.
                </div>
             </th>
             <th data-colwidth="73">
-               <div class="hurmet-cell" data-entry="w × h<sup>k</sup>" contenteditable="false">
+               <div class="hurmet-cell" data-entry="w × h^k^" contenteditable="false">
                   <p>w × h<sup>k</sup></p>
                </div>
             </th>
