Markdown: Do not write ¶ into an empty table cell

--- a/site/manual.html
+++ b/site/manual.html
@@ -114,7 +114,7 @@ print &quot;Hi!&quot;</code></pre></td></tr>
 |:--------|:--------:|---------|
 | datum 1 | 2300     | =2*B1   |
 | datum 4 | 4.3      | &quot;       |
-{#sheetname .grid spreadsheet}</code></pre></details>
+{#sheetname .&quot;grid spreadsheet&quot;}</code></pre></details>
 <h3 id='tex'>TeX</h3>
 <p>Besides its calculation cells, Hurmet also has cells that emulate the math mode of <span class='hurmet-calc' data-entry='\TeX'><math><mrow><mtext>T</mtext><mspace width="-0.1667em" style="margin-left:-0.1667em;"></mspace><mpadded voffset="-0.2155em" style="padding:0 0 0.2155em 0;"><mstyle scriptlevel="0" displaystyle="false"><mtext>E</mtext></mstyle></mpadded><mspace width="-0.125em" style="margin-left:-0.125em;"></mspace><mtext>X</mtext></mrow></math></span> (pronounced <em>tech</em>). These cells display, but do not calculate, math. You can create a TeX cell by clicking the <img src="data:image/svg+xml;utf8,%3Csvg height='16' width='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M.8 4.5V.3c.1-.5.6-.2 1-.3h12.8c.4.2.2.7.3 1v3.5c-.4.7-1.1-.1-1-.7a4 4 0 0 0-2.7-2.7C10.8 1 9.8.6 9.7 1v12.8c0 .8.3 1.5 1.2 1.3.6-.2 1.6.5.8.9H3.9c-.8-.6.4-1 1-.9 1 .2 1-.8 1-1.6V.8c-1.2.2-2.6.5-3.4 1.5-.7.7-.8 1.6-1 2.4-.2.2-.6.1-.7-.2ZM2.6 1c.4-.2.3-.2 0-.2h-1V2ZM9 7.8v-7H6.8l-.1 13.5c.1.4-.4 1 .2.9H9c-.3-.5.1-1.2 0-1.7Zm4.8-6.1c.1 0 .4.5.3 0V.9h-1.3l1 .9z'/%3E%3C/svg%3E" alt="T"> button. Type <strong>Enter</strong> to save the cell.</p>
 <p>To create a cell in TeX display mode, create the cell in a paragraph with no other contents, then set the paragraph justification to Centered.</p>
