Update docs re: list that start w/alphas

--- a/site/manual.html
+++ b/site/manual.html
@@ -79,6 +79,12 @@
 <tr><td><code>1. One</code><br><code>2. Two</code><br><code>3. Three</code></td><td><ol class="decimal" start="1"><li class="tight"><p>One</p></li>
 <li class="tight"><p>Two</p></li>
 <li class="tight"><p>Three</p></li></ol></td></tr>
+<tr><td><code>a. Item a</code><br><code>b. Item b</code><br><code>c. Item c</code></td><td><ol class="lower-alpha" start="1"><li class="tight"><p>Item a</p></li>
+<li class="tight"><p>Item b</p></li>
+<li class="tight"><p>Item c</p></li></ol></td></tr>
+<tr><td><code>A. Item A</code><br><code>B. Item B</code><br><code>C. Item C</code></td><td><ol class="upper-alpha" start="1"><li class="tight"><p>Item A</p></li>
+<li class="tight"><p>Item B</p></li>
+<li class="tight"><p>Item C</p></li></ol></td></tr>
 <tr><td><code>```</code> <br><code>#code block</code> <br><code>print &quot;Hi!&quot;</code> <br><code>```</code></td><td><pre><code># code block
 print &quot;Hi!&quot;</code></pre></td></tr>
 <tr><td><code>---------</code></td><td><hr></td></tr>
