Add micron to unit definitions

--- a/site/unit-definitions.html
+++ b/site/unit-definitions.html
@@ -370,6 +370,7 @@
 <tr><td>mgd</td><td><math><mfrac><mn>3785.411784</mn><mn>86400</mn></mfrac></math></td><td>0</td><td>0</td><td>3</td><td>0</td><td>-1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>million gal/day</td></tr>
 <tr><td>mho</td><td>1</td><td>0</td><td>0</td><td>-2</td><td>-1</td><td>3</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>reciprocal of ohm</td></tr>
 <tr><td>mi</td><td>1609.344</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>miles</td></tr>
+<tr><td>micron</td><td>0.000001</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>mil</td><td>0.0000254</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0.001 inch</td></tr>
 <tr><td>mile</td><td>1609.344</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>5280 feet</td></tr>
 <tr><td>min</td><td>60</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>minute</td></tr>
