Fix string interpolation bug

--- a/site/manual.html
+++ b/site/manual.html
@@ -509,7 +509,7 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <p>Use <code>${</code> before a variable name and <code>}</code> after. Hurmet will write the variable value into that spot in the data. The value will not be unit-aware. Here’s an example.</p>
 <pre><code>w_dead = 25 lbf/ft
 w = ``dead	live	snow
-${w_dead}	30	40`` &#x27;lbf/ft&#x27; = %</code></pre><p>Note that you must do a calculation. It’s not reading a literal value.</p></dd>
+${w_dead}	30	40`` &#x27;lbf/ft&#x27; = %% lbf/ft</code></pre><p>Note that you must do a calculation. It’s not reading a literal value.</p></dd>
 </dl>
 <h2 id='expressions'>Expressions</h2>
 <p>Hurmet calculations are meant to be recognizeable to anyone familiar with standard math notation. That is a broad statement. Here are many nuances:</p>
