--- a/site/guides/Why-Hurmet.html
+++ b/site/guides/Why-Hurmet.html
@@ -31,7 +31,13 @@
 <p><span class='hurmet-calc' data-entry='M = (w L²)/8 = ?? k·ft'><math><mrow><mi>M</mi><mo>=</mo><mstyle displaystyle="true" scriptlevel="0"><mfrac><mrow><mi>w</mi><msup><mi>L</mi><mn>2</mn></msup></mrow><mn>8</mn></mfrac></mstyle></mrow><mrow><mo>=</mo><mstyle displaystyle="true" scriptlevel="0" style="color:#0000ff;"><mfrac><mrow><mo form="prefix" stretchy="false" lspace="0em" rspace="0em">(</mo><mn>252</mn><mspace width="0.1667em"></mspace><mtext>lbf/ft</mtext><mo form="postfix" stretchy="false">)</mo><mo form="prefix" stretchy="false">(</mo><mn>9.4</mn><mspace width="0.1667em"></mspace><mtext>ft</mtext><msup><mo form="postfix" stretchy="false">)</mo><mn>2</mn></msup></mrow><mn>8</mn></mfrac></mstyle></mrow><mrow><mo>=</mo><mn>2.78</mn><mspace width="0.2778em"></mspace><mrow><mtext>k</mtext><mspace width="0.0556em"></mspace><mo lspace="0em" rspace="0em">⋅</mo><mspace width="0.0556em"></mspace><mtext>ft</mtext></mrow></mrow></math></span></p>
 <p>With Hurmet, you get to see what your calculation is doing. So you can get it right.</p>
 <h2 id='reason-#2:-communication'>Reason #2: Communication</h2>
-<p>An engineering calculation is not complete when you have demonstrated a result to yourself. You must also communicate your work to others. Among those others are: *   the designer with whom you are working *   the designer’s checker *   your checker *   the engineer-of-record (who may or may not be the same person as your checker) *   the official who issues a building permit *   yourself, five years from now when the client wants a modification</p>
+<p>An engineering calculation is not complete when you have demonstrated a result to yourself. You must also communicate your work to others. Among those others are:</p>
+<ul><li class="tight"><p>the designer with whom you are working</p></li>
+<li class="tight"><p>the designer’s checker</p></li>
+<li class="tight"><p>your checker</p></li>
+<li class="tight"><p>the engineer-of-record (who may or may not be the same person as your checker)</p></li>
+<li class="tight"><p>the official who issues a building permit</p></li>
+<li class="tight"><p>yourself, five years from now when the client wants a modification</p></li></ul>
 <p>Everyone on that list is busy. They don’t have time to finish work that is only partly written down. They don’t have time to decipher cryptic comments. You need to be complete. You need to be clear.</p>
 <p>You need to convey the calculations you have done and the values you have used. The work should be annotated with descriptions that guide the reader through your chain of thought. A calculation should be at least as detailed as this snippet:</p>
 <div class="indented"><p>Check shear</p>
